Uploaded a new build

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Project Mirco Survivors - Save & Load Test.loader.js";
+      var loaderUrl = buildUrl + "/Save-and-Load-Test.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Project Mirco Survivors - Save & Load Test.data",
-        frameworkUrl: buildUrl + "/Project Mirco Survivors - Save & Load Test.framework.js",
-        codeUrl: buildUrl + "/Project Mirco Survivors - Save & Load Test.wasm",
+        dataUrl: buildUrl + "/Save-and-Load-Test.data",
+        frameworkUrl: buildUrl + "/Save-and-Load-Test.framework.js",
+        codeUrl: buildUrl + "/Save-and-Load-Test.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Project Micro Survivors",
